# continuousMidiEditor

./: 12edo.h  README.md  actions.c  actions.h  actionsReaper.cpp  actionsReaper.h  editorinstance.cpp  editorinstance.h  gui_resources.rc  main.c  mainprogram.c  mainprogram.h  melody.c  melody.h  midi.c  midi.h  midieditor.pro  midieditorReaper.pro  playback.c  playback.h  pluginEntryPoint.cpp  reaper_plugin.h  resource.h  resourses.rc  roll.c  roll.h  sortediterable.c  sortediterable.h  test.cpp  test.h
midieditor/: CMakeLists.txt  actions.c  actions.h  actionsReaper.cpp  actionsReaper.h  editorinstance.cpp  editorinstance.h  main.c  mainprogram.c  melody.c  melody.h  midi.c  midi.h  midieditor.pro  midieditorReaper.pro  midiprot.h  playback.c  playback.h  pluginEntryPoint.cpp  reaper_plugin_functions.h  roll.c  roll.h  save.c  save.h  settingsform.ui
midieditor/midieditor-helper/: mainMidiHelper.c  midieditorHelper.pro  midiprot.h
resources/: symphony_9_1_(c)cvikl.mid
